# ElonaPlusRevork

./: CMakeLists.txt  Main.cpp  Main.h  MainImpl.cpp  Settings.h  ShaderManagerRealization.cpp  ShaderManagerRealization.h  ShaderWrapper.cpp  ShaderWrapper.h  Utilities.h  stdafx.h
OScriptInterpreter/: OScriptInterpreter.cpp  OScriptInterpreter.h  UDS.cpp  UDS.h
SFML/: SFMLWindow.cpp  SFMLWindow.h  Shape.cpp  Shape.h
TestDirectories/shaders/: FragmentShader.fragm  VertexShader.vrtx  shaders.shlst
